--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.613" />
 
     <EditText
-        android:id="@+id/valor2Mult"
+        android:id="@+id/valor2Div"
         android:layout_width="64dp"
         android:layout_height="44dp"
         android:ems="10"
