--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:id="@+id/textViewDiv"
         android:layout_width="45dp"
         android:layout_height="33dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="/"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.256"
@@ -118,6 +120,7 @@
         android:id="@+id/textViewMult"
         android:layout_width="45dp"
         android:layout_height="33dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="x"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +146,7 @@
     <TextView
         android:layout_width="134dp"
         android:layout_height="27dp"
-        android:background="#27C4B5"
+        android:background="#268B97"
         android:gravity="center_horizontal"
         android:text="CALCULADORA"
         android:textColor="#FDF0EDED"
@@ -187,6 +190,7 @@
         android:id="@+id/textViewSoma"
         android:layout_width="45dp"
         android:layout_height="33dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -253,6 +257,7 @@
         android:id="@+id/textViewSub"
         android:layout_width="45dp"
         android:layout_height="33dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
